fixed background image and logo image alignment still need to address positioning of NAV bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,13 @@
 .top-background {
     background-image: url("../img/Phoenix-Custom-Printing-Background-edited.png");
     width: 100vw;
-
-    position: absolute;
+    display: flex;
+    position: fixed;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     z-index: -1;
-    padding-top: 15%;
+    padding-top: 9%;
     padding-bottom: 50px;
     margin: 0px;
 }
@@ -22,7 +22,7 @@
     display: flex;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 0px;
+    margin-top: -15px;
     margin-bottom: 0px;
 }
 
@@ -31,32 +31,38 @@ body {
     margin: 0px;
 }
 
-.navbar {
-    
+.navbar-custom {
+    display: inline-flex;
     background-color: rgb(47, 51, 51);
     opacity: 0.7;
-    position: absolute;
+    /* position: relative; */
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 355px;
+    margin-top: 5px;
     width: 95%;
     font-size: 25px;
+    
 }
 
-.navbar a {
+.navbar-custom a {
     color: white;
     cursor: pointer;
+    text-align: center;
+    align-items: center;
+    align-content: center;
+    padding: 3px;
+    text-decoration: none;
 }
 
-.active {
+.active-custom {
     color: red;
 }
 
 .sp-contin {
     color: white;
     position: absolute;
-    margin-top: 500px;
+    margin-top: 5px;
     justify-content: center;
     align-items: center;
 }
